--- a/site/index.html
+++ b/site/index.html
@@ -9,5 +9,6 @@
     <h1>Pagina prueba</h1>
 
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam modi fugit suscipit cupiditate. At accusamus deserunt, ex nemo consequatur assumenda.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, numquam?</p>
 </body>
 </html>
